--- a/ProvaDev/index.html
+++ b/ProvaDev/index.html
@@ -63,7 +63,7 @@
         <button id="buy" class="modal-button" value="Comprar Agora">COMPRAR AGORA</button>
     </div>
 </div>
-
+<span> teste</span>
 <script src="js/script.js"></script>
 </body>
 </html>
