--- a/ProvaDev/index.html
+++ b/ProvaDev/index.html
@@ -26,10 +26,11 @@
 
 <div class="counterline">
 <h2 id="counterid"class="container">Carros encontrados:</h2>
-<a class="novoCarro"href="formulario.html">Novo carro</a>
+<a class="novoCarro"href="formulario.html">ADD</a>
+<a class="editarCarro" href="listagem.html">LISTA</a>
 </div>
 
-<div class="cards-container container " id="carscontainer">
+<div class="cards-container container" id="carscontainer">
         <!-- <div class="container-jaguar">
             <img class="container-jaguar-img" src="img/jaguar.png">
             <p class="container-jaguar-name">Jaguar Fake</p>
@@ -63,7 +64,7 @@
         <button id="buy" class="modal-button" value="Comprar Agora">COMPRAR AGORA</button>
     </div>
 </div>
-<span> teste</span>
+</div>
 <script src="js/script.js"></script>
 </body>
 </html>
