--- a/ProvaDev/formulario.html
+++ b/ProvaDev/formulario.html
@@ -21,11 +21,11 @@
                 </div>
                 <div class="inputBox">
                     <span class="details">Valor do carro</span>
-                    <input type="number" name="valor-carro"id="valorId" placeholder="Digite o nome do carro aqui">
+                   <input type="number" name="valor-carro"id="valorId" placeholder="Digite o nome do carro aqui">
                 </div>
                 <div class="inputBox">
                     <span class="details">Descrição</span>
-                    <input type="text" name="description-carro" id="descricaoId" placeholder="Digite uma breve descrição do produto"></input>
+                    <textarea name="description-carro" id="descricaoId" placeholder="Digite uma breve descrição do produto"></textarea>
                 </div>
                 <div class="inputImg">
                     <label for="fileForm" id="labelImg">Envie um arquivo</label>
