--- a/ProvaDev/listagem.html
+++ b/ProvaDev/listagem.html
@@ -14,6 +14,10 @@
     <header>
         <div class="header-container container">
             <img class="header-container-logo"src="img/logo.png" alt="logo">
+            <div class="lupaContainer">
+                <input type="text">
+                <img class ="lupaImg"src="img/lupa.png">
+            </div>
             <h1>Vendarro LTDA</h1>
         </div>
     </header>
@@ -32,6 +36,12 @@
                 </tbody>
             </thead>
         </table>
+    <footer>
+        <div class="input-container container">
+            <input type="text" placeholder=" Digite o modelo do carro..."  id="cardList">
+            <img class="lupa-input"src="img/lupa.png">
+        </div>
+    </footer>
 </body>
 <script src="js/list.js"></script>
 </html>
