--- a/ProvaDev/formulario.html
+++ b/ProvaDev/formulario.html
@@ -17,26 +17,30 @@
             <div class="carDetails">
                 <div class="inputBox">
                     <span class="details">Nome</span>
+                    <p id="validar-nome"></p>
                     <input type="text" name="modelo-carro" id="nomeId" placeholder="Digite o nome do carro aqui">
                 </div>
                 <div class="inputBox">
                     <span class="details">Valor do carro</span>
+                    <p class="validar-valor"></p>
                    <input type="number" name="valor-carro"id="valorId" placeholder="Digite o nome do carro aqui">
                 </div>
                 <div class="inputBox">
                     <span class="details">Descrição</span>
+                    <p class="validar-descrição"></p>
                     <textarea name="description-carro" id="descricaoId" placeholder="Digite uma breve descrição do produto"></textarea>
                 </div>
                 <div class="inputImg">
                     <label for="fileForm" id="labelImg">Envie um arquivo</label>
-                    <input type="file" accept="image/*" id="fileForm" name="file-carro">
+                    <input type="file" accept="image/jpg, image/jpeg, image/png" id="fileForm" name="file-carro">
                     <span class="fileSpan">
+                        <p class="validar-imagem"></p>
                         <strong>Arquivo: </strong>
                         <span id="fileName">Nenhum arquivo</span>
                     </span>
                 </div>
                 <div class="SubmitForm">
-                    <button id="buttonFormId" type="button" onclick="novoCarro()">Registrar</button>
+                    <button id="buttonFormId" type="button" onclick="validar()">Registrar</button>
                 </div>
             </div>
         </form>
