--- a/ProvaDev/listagem.html
+++ b/ProvaDev/listagem.html
@@ -13,12 +13,12 @@
 <body>
     <header>
         <div class="header-container container">
-            <img class="header-container-logo"src="img/logo.png" alt="logo">
-            <div class="lupaContainer">
-                <input type="text">
-                <img class ="lupaImg"src="img/lupa.png">
-            </div>
+            <img class="header-container-logo"src="img/logo.png" alt="logo">    
             <h1>Vendarro LTDA</h1>
+        </div>
+        <div class="lupaContainer">
+            <input type="text" id="cardList" placeholder=" Digite o modelo do carro...">
+            <img class ="lupaImg"src="img/lupa.png">
         </div>
     </header>
         <table class="carTable">
@@ -36,12 +36,7 @@
                 </tbody>
             </thead>
         </table>
-    <footer>
-        <div class="input-container container">
-            <input type="text" placeholder=" Digite o modelo do carro..."  id="cardList">
-            <img class="lupa-input"src="img/lupa.png">
-        </div>
-    </footer>
+
 </body>
 <script src="js/list.js"></script>
 </html>
