--- a/ProvaDev/index.html
+++ b/ProvaDev/index.html
@@ -25,9 +25,8 @@
 </div>
 
 <div class="counterline">
-<h2 id="counterid"class="container">Carros encontrados:</h2>
-<a class="novoCarro"href="formulario.html">ADD</a>
-<a class="editarCarro" href="listagem.html">LISTA</a>
+<h2 id="counterid"class="container">Carros encontrados: </h2>
+<a class="editarCarro" href="listagem.html">Gerir</a>
 </div>
 
 <div class="cards-container container" id="carscontainer">
