--- a/ProvaDev/listagem.html
+++ b/ProvaDev/listagem.html
@@ -18,6 +18,7 @@
         </div>
         <div class="lupaContainer">
             <input type="text" id="cardList" placeholder=" Pesquise um carro">
+            <button class="buttonAdd" onclick="exibeModalNewCar()"> Novo carro</button>
         </div>
     </header>
         <table class="carTable">
@@ -71,6 +72,49 @@
                 </div>
             </form>
         </div>
+        <div class="modalDeleteBg" onclick="closemodalDelete()"></div>
+        <div id="modalDeleteContainer">
+                <a>Deseja mesmo excluir ?</a>
+                <button id="ButtonYes">Sim</button>
+                <button id="ButtonNo" onclick="closemodalDelete()">Não</button>
+        </div>
+    <div id="modalNewCarBg" onclick="closeModalNewCar()"></div>
+    <div id="modalNewCarContainer">
+        <div class="containerForm">
+            <div class="title">Cadastre seu carro</div>
+            <form  id="myForm">
+                <div class="carDetails">
+                    <div class="inputBox">
+                        <span class="details">Nome</span>
+                        <p id="validar-nome"></p>
+                        <input type="text" name="modelo-carro" id="nomeId" placeholder="Digite o nome do carro aqui">
+                    </div>
+                    <div class="inputBox">
+                        <span class="details">Valor do carro</span>
+                        <p class="validar-valor"></p>
+                       <input type="number" name="valor-carro"id="valorId" placeholder="Digite o nome do carro aqui">
+                    </div>
+                    <div class="inputBox">
+                        <span class="details">Descrição</span>
+                        <p class="validar-descrição"></p>
+                        <textarea name="description-carro" id="descricaoId" placeholder="Digite uma breve descrição do produto"></textarea>
+                    </div>
+                    <div class="inputImg">
+                        <label for="fileForm" id="labelImg">Envie um arquivo</label>
+                        <input type="file" accept="image/jpg, image/jpeg, image/png" id="fileFormNewCar" name="file-carro">
+                        <span class="fileSpan">
+                            <p class="validar-imagem"></p>
+                            <strong>Arquivo: </strong>
+                            <span id="fileNameNewCar">Nenhum arquivo</span>
+                        </span>
+                    </div>
+                    <div class="SubmitForm">
+                        <button id="buttonFormId" type="button" onclick="validarNovoCarro()">Registrar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 <script src="js/list.js"></script>
 </html>
