Fazendo dois modais dentro da lista de carros

--- a/ProvaDev/formulario.html
+++ b/ProvaDev/formulario.html
@@ -13,7 +13,7 @@
 <body>
     <div class="containerForm">
         <div class="title">Cadastre seu carro</div>
-        <form  id="myForm">
+        <form  id="newCarForm">
             <div class="carDetails">
                 <div class="inputBox">
                     <span class="details">Nome</span>
